src/test/c/reject/12-missingClef.msh
score myScore {
    {
        tempo 200;
        signature 4 / 4;
        piano {
            tabs myTabs {
                c(q) d(q) e(q) f(q) | g(q) a(q) b(q) c(q)
            }
        }
    }
}
